--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="container">
         <div class="row align-items-center row1">
           <div class="col-sm align-self-center main__data text-center">
-            <h1 class="main__title">Feliciano food</h1>
+            <h1 class="main__title">Feliciano YERKHAN</h1>
             <h2 class="main__subtitle">Try the best and <br> healthy food.</h2>
             <a href="#weekmenu" class="btn">View menu</a>
           </div>
