Sreveal, JShead, mapPage.

--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
     </div>
   </footer>
 
-  <!-- <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
   <script>
     // $( window ).scroll(function()
     console.log("ASKDLMASKD");
@@ -186,7 +186,7 @@
     sr.reveal(`.main__data, .main__img, .main2, .col-sm, .btn, .btn2, label, input, textarea`, {
       interval: 120
     })
-  </script> -->
+  </script>
 </body>
 
 </html>
