--- a/menu.html
+++ b/menu.html
@@ -650,7 +650,7 @@
   </footer>
 
   <!-- JS, jQuery -->
-  <!-- <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
   <script>
     // $( window ).scroll(function()
     console.log("ASKDLMASKD");
@@ -683,7 +683,7 @@
     sr.reveal(`.main__data, .main__img, .main2, .btn, .btn2`, {
       interval: 120
     })
-  </script> -->
+  </script>
 </body>
 
 </html>
