--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </div>
   </footer>
 
-  <!-- <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
   <script>
     // $( window ).scroll(function()
     console.log("ASKDLMASKD");
@@ -253,7 +253,7 @@
     sr.reveal(`.main__data, .main__img, .main2, .col-sm, .btn, .btn2`, {
       interval: 120
     })
-  </script> -->
+  </script>
 </body>
 
 </html>
