commit menu db, send mail

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <ul class="nav__list">
               <li class="nav__item"><a href="#about" id="navbar__link" class="navbar__link1 ">About</a></li>
               <li class="nav__item"><a href="#services" id="navbar__link2" class="navbar__link1 ">Services</a></li>
-              <li class="nav__item"><a href="menu.html#menu" id="navbar__link3" class="navbar__link1 ">Menu</a></li>
+              <li class="nav__item"><a href="menu.php#menu" id="navbar__link3" class="navbar__link1 ">Menu</a></li>
               <li class="nav__item"><a href="#contact" id="navbar__link4" class="navbar__link1 ">Contact us</a></li>
             </ul>
           </div>
@@ -47,7 +47,7 @@
       <div class="container">
         <div class="row align-items-center row1">
           <div class="col-sm align-self-center main__data text-center">
-            <h1 class="main__title">Feliciano YERKHAN</h1>
+            <h1 class="main__title">Feliciano food</h1>
             <h2 class="main__subtitle">Try the best and <br> healthy food.</h2>
             <a href="#weekmenu" class="btn">View menu</a>
           </div>
@@ -103,7 +103,7 @@
           <div class="col-sm text-center">
             <!--  -->
             <div class="menu__option">
-              <img src="img/plate1.png" alt="" class="menu__img">
+              <img src="img/salad1.png" alt="" class="menu__img">
               <h3 class="menu__name">Barbecue salad</h3>
               <span class="menu__detail">Delicious dish</span>
               <span class="menu__name menu__detail">$22.00</span>
@@ -113,7 +113,7 @@
           <div class="col-sm text-center">
             <!--  -->
             <div class="menu__option">
-              <img src="img/plate1.png" alt="" class="menu__img">
+              <img src="img/salad2.png" alt="" class="menu__img">
               <h3 class="menu__name">Barbecue salad</h3>
               <span class="menu__detail">Delicious dish</span>
               <span class="menu__name menu__detail">$22.00</span>
@@ -123,7 +123,7 @@
           <div class="col-sm text-center">
             <!--  -->
             <div class="menu__option">
-              <img src="img/plate1.png" alt="" class="menu__img">
+              <img src="img/salad3.png" alt="" class="menu__img">
               <h3 class="menu__name">Barbecue salad</h3>
               <span class="menu__detail">Delicious dish</span>
               <span class="menu__name menu__detail">$22.00</span>
@@ -162,7 +162,7 @@
             <p class="section__description">If you want to reserve a table in our restaurant, contact us and we will attend you quickly, with our 24/7 chat service.</p>
           </div>
           <div class="col-sm-3">
-            <a href="contact.html#contact" class="btn2">Contact us now</a>
+            <a href="contact.php#contact" class="btn2">Contact us now</a>
           </div>
         </div>
       </div>
