--- a/contact.html
+++ b/contact.html
@@ -63,22 +63,26 @@
         <div class="contact_wrap">
           <div class="contact_row">
             <div class="first_name">
+              <form  action="contacts.php" method="post">
               <label for="fname" class="section-subtitle">First name</label>
               <br>
               <input type="text" class="form-control" id="fname">
             </div>
             <div class="second_name">
+              <form  action="contacts.php" method="post">
               <label for="sname" class="section-subtitle">Second name</label>
               <br>
               <input type="text" class="form-control" id="sname">
             </div>
           </div>
           <div class="mail">
+            <form  action="contacts.php" method="post">
             <label for="fmail" class="section-subtitle">Email</label>
             <br>
             <input type="email" class="form-control email" id="fmail">
           </div>
           <div class="textarea">
+            <form  action="contacts.php" method="post">
             <label for="messsage" class="section-subtitle">Message</label>
             <br>
             <textarea name="message" id="message" cols="30" rows="10" class="form-control email" style="height: 169px;"></textarea>
@@ -153,7 +157,7 @@
     </div>
   </footer>
 
-  <!-- <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
   <script>
     // $( window ).scroll(function()
     console.log("ASKDLMASKD");
@@ -186,7 +190,7 @@
     sr.reveal(`.main__data, .main__img, .main2, .col-sm, .btn, .btn2, label, input, textarea`, {
       interval: 120
     })
-  </script> -->
+  </script>
 </body>
 
 </html>
